traces/bug_477.txt
examples++-load/gmsh.cpp:633: error: DEAD_STORE
  The value written to &num (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:633:5: Write of unused value
631.   		  if(fread(data, sizeof(int), n, fp) != n) exit(1);
632.   		  if(swap) SwapBytes((char*)data, sizeof(int), n);
633.   		  int num = data[0];
           ^
634.   		  int physical = (numTags > 0) ? data[4 - numTags] : 0;
635.   		  int elementary = (numTags > 1) ? data[4 - numTags + 1] : 0;
